--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -16,7 +16,7 @@ $primary: #66a0da;
 $secondary: #26a69a;
 $accent: #f2c037;
 $drawer: #363740;
-$dark: #1d1d1d;
+$dark: #1b1b1b;
 
 $positive: #21ba45;
 $negative: #c10015;
